<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/o"
            android:textColor="@color/logoColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/r"
            android:textColor="@color/yellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/d"
            android:textColor="@color/green"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/e"
            android:textColor="@color/pink"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/r"
            android:textColor="@color/logoColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/s"
            android:textColor="@color/yellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerOrderHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</RelativeLayout>