<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutVendorExtras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eventmakr.eventmakr.Activities.VendorExtrasActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarVendorExtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:elevation="4dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:id="@+id/profileBanner"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/p"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/logoColor"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/r"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/o"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/f"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/pink"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/i"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/l"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/e"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/productsBanner"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/p"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/logoColor"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/r"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/o"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/d"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/pink"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/u"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/c"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/t"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/s"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/pink"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/documentsBanner"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/d"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/logoColor"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/o"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/c"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/u"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/pink"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/m"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/e"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/yellow"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/t"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/pink"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/s"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                </Toolbar>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_below="@+id/appBarVendorExtras"
            android:id="@+id/containerVendorExtras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
