<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.eventmakr.eventmakr.Activities.MainActivity">

    <com.nvanbenschoten.motion.ParallaxImageView
        android:id="@+id/parallaxBackground"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            app:cardElevation="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            app:cardElevation="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView_logo"
        android:src="@drawable/logo2"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_width="340dp"
        android:layout_height="300dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:visibility="invisible"
            android:id="@+id/buttonPlanning"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/colorButtons"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/i_m_planning_an_event"
                    android:elevation="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorText"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buttonVendor"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorButtons"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="60dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_imAVendor"
                    android:text="@string/i_m_a_vendor"
                    android:textColor="@color/colorText"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/buttonLogIn"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorButtons"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/log_in"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:elevation="4dp"
                android:textColor="@color/colorText"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
