<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <android.support.v7.widget.CardView
                android:layout_alignParentTop="true"
                app:cardElevation="4dp"
                android:id="@+id/cardViewAddProduct_helper"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewAddProduct"
                        android:scaleType="centerCrop"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBarAddProduct"
                        android:layout_centerInParent="true"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:elevation="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewEdittext_helper"
        app:cardElevation="2dp"
        android:layout_below="@+id/cardViewAddProduct_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutEditText"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/rename_box"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextProductName"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/lead_pencil"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextAddProductDescription"
                    android:hint="@string/description"
                    android:inputType="textCapSentences"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/dollar_sign"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextAddProductPrice"
                    android:inputType="numberDecimal"
                    android:hint="@string/price_example_20_00"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cardViewEdittext_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCancel"
            app:elevation="6dp"
            android:src="@drawable/cancel"
            android:layout_margin="6dp"
            app:backgroundTint="@color/colorButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            app:elevation="6dp"
            android:src="@drawable/plus"
            android:layout_margin="6dp"
            app:backgroundTint="@color/colorButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
